# cpp-visitor-pattern

./: .clang-format  .gitmodules  BENCHMARK.md  CMakeLists.txt  LICENSE  README.md
benchmark/: CMakeLists.txt  benchmark-main.cpp  benchmark.cpp  draw_results.gnuplot  draw_results_gcc.gnuplot  generate_benchmark_graphs.py  sample_results_clang_10.txt  sample_results_gcc_10.txt  visitor_odwyer.hpp  visitor_pikus.hpp
example/: CMakeLists.txt
examples/: CMakeLists.txt
examples/example1/: CMakeLists.txt  example1.cpp
examples/example2/: CMakeLists.txt  base.hpp  base_children.hpp  base_impl.hpp  base_visitables.hpp  derived1.hpp  derived2.hpp  example2.cpp  user1.cpp  user1.hpp  user2.cpp  user2.hpp  user3.cpp  user3.hpp
include/vstor/: vstor.hpp
tests/: CMakeLists.txt  tests.cpp
